fix: update text-wrap property in contact form styles for improved text handling

--- a/src/app/landing-page/sections/f-contact/contact-form/contact-form.component.scss
+++ b/src/app/landing-page/sections/f-contact/contact-form/contact-form.component.scss
@@ -157,7 +157,7 @@
         font-family: "Karla", sans-serif;
         font-size: 0.93rem;
         color: white;
-        text-wrap: nowrap;
+        text-wrap: wrap;
       }
 
       a {
